[gd_scene load_steps=7 format=3 uid="uid://bt7a5d32jn264"]

[ext_resource type="Script" uid="uid://bsmy10r3vbaq" path="res://src/hud/config_menu.gd" id="1_55r1t"]
[ext_resource type="Texture2D" uid="uid://di22j4f5ru0hr" path="res://assets/hud/FONDOMAIN.jpg" id="2_62lch"]
[ext_resource type="Texture2D" uid="uid://cyes2a16a4a3x" path="res://assets/hud/OPCIONES.png" id="3_6laib"]
[ext_resource type="Texture2D" uid="uid://bxbdrxi4kong1" path="res://assets/hud/VOLVER.png" id="7_qdn1f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5lq2"]
texture = ExtResource("7_qdn1f")
modulate_color = Color(0.764706, 0.764706, 0.764706, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_txyk1"]
texture = ExtResource("7_qdn1f")

[node name="ConfigMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55r1t")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_62lch")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -16.0
offset_right = 4.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture = ExtResource("3_6laib")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Musica"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 41.0
offset_top = 570.0
offset_right = 191.0
offset_bottom = 620.0
theme_override_styles/hover = SubResource("StyleBoxTexture_r5lq2")
theme_override_styles/normal = SubResource("StyleBoxTexture_txyk1")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
